vbnc/vbnc/tests/Errors/30375.vb
Option Strict On
Interface I

End Interface
Class A
    Dim ii As New I
End Class